* gefx helpers moved to vendors folder

--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -66,10 +66,9 @@
 
     <script src="vendor/twitter/typeahead.bundle.min.js"></script>
 
-    <script src="js/gexf-visualization.js"></script>
+    <script src="vendor/sigma/sigma.gexfVis.js"></script>
+    <script src="vendor/sigma/sigma.gexfNodeVis.js"></script>
 
     <script src="js/container-init.js#v=1"></script>
-      
-    <script src="js/nodes-visualisation.js#v=1"></script>
 </body>
 </html>
