--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -16,7 +16,7 @@
       <div class="container-fluid">
         
         <div class="navbar-header">
-            <a id="site-name" class="navbar-brand" href="/">GeekData</a>
+            <a class="navbar-brand site-name" href="/">GeekData</a>
         </div>
         
         <div class="collapse navbar-collapse" id="main-navbar">
@@ -35,7 +35,7 @@
     </nav>
 
     <div id="vis" class="sigma-parent">
-        <div id="loading">Loading the data may take a while, please be patient...</div>
+        <div id="loading" class="loading">Loading the data may take a while, please be patient...</div>
         <div id="sig" class="sigma-expand"></div>
     </div>
 
@@ -68,7 +68,5 @@
 
     <script src="vendor/sigma/sigma.gexfVis.js"></script>
     <script src="vendor/sigma/sigma.gexfNodeVis.js"></script>
-
-    <script src="js/container-init.js#v=1"></script>
 </body>
 </html>
