--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -23,13 +23,13 @@
             <span class="slogan">Find your way in the <span>universe</span> of technology</span>
             <div class="pull-right navbar-profiles">
                 <a href="https://github.com/GSerjo" target="blank">
-                    <img src="https://avatars0.githubusercontent.com/u/1163475?v=3&amp;s=60" alt="GSerjo user avatar"/ >
+                    <img src="https://avatars0.githubusercontent.com/u/1163475?v=3&amp;s=60" title="GSerjo" alt="GSerjo user avatar"/ >
                 </a>
                 <a href="https://github.com/FireAlkazar" target="blank">
-                    <img src="https://avatars2.githubusercontent.com/u/936356?v=3&amp;s=60" alt="FireAlkazar user avatar"/ >
+                    <img src="https://avatars2.githubusercontent.com/u/936356?v=3&amp;s=60" title="FireAlkazar" alt="FireAlkazar user avatar"/ >
                 </a>
                 <a href="https://github.com/Sufflavus" target="blank">
-                    <img src="https://avatars2.githubusercontent.com/u/2123162?v=3&amp;s=60" alt="Sufflavus user avatar"/ >
+                    <img src="https://avatars2.githubusercontent.com/u/2123162?v=3&amp;s=60" title="Sufflavus" alt="Sufflavus user avatar"/ >
                 </a>
             </div>
         </div>
