* styles moved in css

--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -46,15 +46,12 @@
             <div>
                 <div class="header">
                     <span>
-                        <div style="width: 175px; float:left">
+                        <div class="header-main-content">
                             <span id="lib_name">jQuery</span>&nbsp;&nbsp;&nbsp;
                             <a title="stars on Github" class="favorite">★</a><span id="lib_stars_count"></span>
                         </div>
                         <div class="sub-links"> 
                             <a id="lib_url" href="https://github.com/" target="blank" title="link to Github">Github</a>
-                            <!-- <a id="lib_stars" href="https://github.com/" target="blank" title="link to Github">
-                                
-                            </a> -->
                         </div>
                         <div class="clearfix"></div>
                     </span>
@@ -99,7 +96,7 @@
             <div>
                 <div class="header cource">
                     <span>
-                        <div style="width: 145px; float:left">
+                        <div class="header-main-content">
                             <span id="cource_name">jQuery</span>
                         </div>
                         <div class="sub-links cource"> 
