--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>GeekData</title>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeekData</title>
+
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <link href="vendor/bootstrap/bootstrap-3.3.6.min.css" rel="stylesheet">
     <link href="vendor/font-awesome/font-awesome-4.5.0.min.css" rel="stylesheet">
