--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -11,7 +11,7 @@
 
     <link href="vendor/font-awesome/font-awesome-4.5.0.min.css" rel="stylesheet">
     <link href="vendor/bootstrap/bootstrap-3.3.6.min.css" rel="stylesheet">
-    <link href="vendor/bootstrap/bootstrap-toggle.min.css" rel="stylesheet">
+    <!-- <link href="vendor/bootstrap/bootstrap-toggle.min.css" rel="stylesheet"> -->
 
     <link href="css/style.css#v=1" rel="stylesheet">
 </head>
@@ -25,7 +25,7 @@
         </div>
         
         <div class="collapse navbar-collapse" id="main-navbar" style="text-align: center; font-size: 25px;">
-            <span class="slogan"><input type="checkbox" data-toggle="toggle" data-on="Find" data-off="Lose">Find your way in the <span>universe</span> of technology</span>
+            <span class="slogan"><!-- <input type="checkbox" data-toggle="toggle" data-on="Find" data-off="Lose"> -->Find your way in the <span>universe</span> of technology</span>
             <div class="pull-right navbar-profiles">
                 <a href="https://github.com/GSerjo" target="blank">
                     <img src="https://avatars0.githubusercontent.com/u/1163475?v=3&amp;s=60" title="GSerjo" alt="GSerjo user avatar"/ >
@@ -133,8 +133,7 @@
 
     <script src="vendor/jquery/jquery-2.2.0.min.js"></script>
     <script src="vendor/bootstrap/bootstrap-3.3.6.min.js"></script>
-    <script src="vendor/bootstrap/bootstrap-toggle.min.js"></script>
-
+    
     <script src="vendor/sigma/sigma.min.js"></script>
     <script src="vendor/sigma/sigma.parseJson.js"></script>
 
