--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -115,6 +115,13 @@
                 </div>
             </div> 
         </div>
+        <div class="content" id="group_content">
+            <div>
+                <div class="header group">
+                    <span id="group_name">jQuery</span>
+                </div>
+            </div> 
+        </div>
     </div>
 
     <a href="https://github.com/PerfCo/GeekData" class="github-corner" target="blank">
