--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -11,7 +11,6 @@
 
     <link href="vendor/font-awesome/font-awesome-4.5.0.min.css" rel="stylesheet">
     <link href="vendor/bootstrap/bootstrap-3.3.6.min.css" rel="stylesheet">
-    <link href="vendor/bootstrap/bootstrap-toggle.min.css" rel="stylesheet">
 
     <link href="css/style.css#v=2" rel="stylesheet">
 </head>
@@ -26,8 +25,7 @@
         
         <div class="collapse navbar-collapse" id="main-navbar" style="text-align: center; font-size: 25px;">
             <div class="slogan">
-                <input id="toggle_view" type="checkbox" checked data-toggle="toggle" data-on="Find" data-off="Lose">
-                your way in the <span class="highlight-part">universe</span> of technology
+                Find your way in the <span class="highlight-part">universe</span> of technology
             </div>
             <div class="pull-right navbar-profiles">
                 <a href="https://github.com/GSerjo" target="blank">
@@ -141,7 +139,6 @@
    
     <script src="vendor/jquery/jquery-2.2.0.min.js"></script>
     <script src="vendor/bootstrap/bootstrap-3.3.6.min.js"></script>
-    <script src="vendor/bootstrap/bootstrap-toggle.min.js"></script>
 
     <script src="vendor/sigma/sigma.min.js"></script>
     <script src="vendor/sigma/sigma.parseJson.js#v=2"></script>
@@ -152,11 +149,5 @@
     <script src="vendor/sigma/sigma.gexfVisInit.js#v=2"></script>
 
     <script src="js/event-handler.js#v=2"></script>
-
-    <script type="text/javascript">
-        /*(function(){
-            $("[name='view-switch-checkbox']").bootstrapSwitch();
-        })();*/
-    </script>
 </body>
 </html>
