--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -71,29 +71,29 @@
             <div>
                 <div class="header user">
                     <div class="gravatar">
-                        <a id="guru_profile_url" href="http://stackoverflow.com/users/23354/marc-gravell" target="blank">
+                        <a id="guru_profile_url" href="" target="blank">
                             <div class="gravatar-wrapper">
-                                <img id="guru_avatar" src="https://i.stack.imgur.com/NJcqr.png?s=64&amp;g=1" alt="user avatar">
+                                <img id="guru_avatar" src="" alt="user avatar">
                             </div>
                         </a>
                     </div>
                     <div class="user-info">
-                        <a id="guru_name" href="http://stackoverflow.com/users/23354/marc-gravell" target="blank" class="user-link">Marc Gravell</a>
+                        <a id="guru_name" href="http://stackoverflow.com/users/23354/marc-gravell" target="blank" class="user-link">Guru</a>
                         <div class="user-badges">
                             <span id="guru_badges_gold">
                                 <span class="gold-badges">&#9679;</span>
-                                <span class="badgecount">133</span>
+                                <span class="badgecount">0</span>
                             </span>
                             <span id="guru_badges_silver">
                                 <span class="silver-badges">&#9679;</span>
-                                <span class="badgecount">1621</span>
+                                <span class="badgecount">0</span>
                             </span>
                             <span id="guru_badges_bronze">
                                 <span class="bronze-badges">&#9679;</span>
-                                <span class="badgecount">2114</span>
+                                <span class="badgecount">0</span>
                             </span>
                         </div>
-                        <a id="guru_site" href="http://blog.marcgravell.com" target="blank" rel="nofollow">StackOverflow Profile</a><br>
+                        <a id="guru_site" href="" target="blank" rel="nofollow">StackOverflow Profile</a><br>
                     </div>
                 </div>
             </div>
@@ -113,13 +113,6 @@
                 </div>
             </div> 
         </div>
-        <div class="content" id="group_content">
-            <div>
-                <div class="header group">
-                    <span id="group_name">jQuery</span>
-                </div>
-            </div> 
-        </div>
     </div>
 
     <a href="https://github.com/PerfCo/GeekData" class="github-corner" target="blank">
@@ -134,11 +127,11 @@
     <script type="text/javascript">
         var gexf = 'data/data.json.js';
     </script>
-
-    <script src="data/data.json.js"></script>
    
     <script src="vendor/jquery/jquery-2.2.0.min.js"></script>
     <script src="vendor/bootstrap/bootstrap-3.3.6.min.js"></script>
+    
+    <script src="data/data.json.js"></script>
 
     <script src="vendor/sigma/sigma.min.js"></script>
     <script src="vendor/sigma/sigma.parseJson.js#v=2"></script>
