* gexf moved to another folder

--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -138,8 +138,8 @@
 
     <script src="vendor/twitter/typeahead.bundle.min.js"></script>
 
-    <script src="vendor/sigma/sigma.gexfVis.js#v=2"></script>
-    <script src="vendor/sigma/sigma.gexfVisInit.js#v=2"></script>
+    <script src="js/gexf-vis.js#v=2"></script>
+    <script src="js/gexf-vis-init.js#v=2"></script>
 
     <script src="js/event-handler.js#v=2"></script>
 </body>
