--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -143,5 +143,15 @@
     <script src="js/gexf-vis-init.js#v=2"></script>
 
     <script src="js/event-handler.js#v=2"></script>
+	
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-74299021-1', 'auto');
+		ga('send', 'pageview');
+	</script>
 </body>
 </html>
