+ tooltip code moved in separate file

--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -139,6 +139,8 @@
 
     <script src="vendor/twitter/typeahead.bundle.min.js"></script>
 
+    <script src="js/namespaces.js#v=2"></script>
+    <script src="js/tooltip.js#v=2"></script>
     <script src="js/gexf-vis.js#v=2"></script>
     <script src="js/gexf-vis-init.js#v=2"></script>
 
