* tooltip image error handler

--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -74,12 +74,12 @@
                     <div class="gravatar">
                         <a id="guru_profile_url" href="" target="blank">
                             <div class="gravatar-wrapper">
-                                <img id="guru_avatar" src="" alt="user avatar">
+                                <img id="guru_avatar" src="images/no-avatar.jpg" alt="user avatar">
                             </div>
                         </a>
                     </div>
                     <div class="user-info">
-                        <a id="guru_name" href="http://stackoverflow.com/users/23354/marc-gravell" target="blank" class="user-link">Guru</a>
+                        <a id="guru_name" href="" target="blank" class="user-link">Guru</a>
                         <div class="user-badges">
                             <span id="guru_badges_gold">
                                 <span class="gold-badges">&#9679;</span>
