- gexf-vis-init.js * rename guru -> geek

--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -68,33 +68,33 @@
                 </div>
             </div> 
         </div>
-        <div class="content" id="guru_content">
+        <div class="content" id="geek_content">
             <div>
                 <div class="header user">
                     <div class="gravatar">
-                        <a id="guru_profile_url" href="" target="blank">
+                        <a id="geek_profile_url" href="" target="blank">
                             <div class="gravatar-wrapper">
-                                <img id="guru_avatar" src="images/no-avatar.jpg" alt="user avatar">
+                                <img id="geek_avatar" src="images/no-avatar.jpg" alt="user avatar">
                             </div>
                         </a>
                     </div>
                     <div class="user-info">
-                        <a id="guru_name" href="" target="blank" class="user-link">Guru</a>
+                        <a id="geek_name" href="" target="blank" class="user-link">Guru</a>
                         <div class="user-badges">
-                            <span id="guru_badges_gold">
+                            <span id="geek_badges_gold">
                                 <span class="gold-badges">&#9679;</span>
                                 <span class="badgecount">0</span>
                             </span>
-                            <span id="guru_badges_silver">
+                            <span id="geek_badges_silver">
                                 <span class="silver-badges">&#9679;</span>
                                 <span class="badgecount">0</span>
                             </span>
-                            <span id="guru_badges_bronze">
+                            <span id="geek_badges_bronze">
                                 <span class="bronze-badges">&#9679;</span>
                                 <span class="badgecount">0</span>
                             </span>
                         </div>
-                        <a id="guru_site" href="" target="blank" rel="nofollow">StackOverflow Profile</a><br>
+                        <a id="geek_site" href="" target="blank" rel="nofollow">StackOverflow Profile</a><br>
                     </div>
                 </div>
             </div>
