--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -43,9 +43,9 @@
       </div>
     </nav>
 
-    <div id="vis" class="sigma-parent">
+    <div class="sigma-parent">
         <div id="loading" class="loading">Loading the data may take a while, please be patient...</div>
-        <div id="sig" class="sigma-expand"></div>
+        <div id="sigma_content" class="sigma-expand"></div>
     </div>
 
     <div id="tooltip" class="tooltip">
@@ -124,10 +124,6 @@
             </path>
         </svg>
     </a>
-
-    <script type="text/javascript">
-        var gexf = 'data/data.json.js';
-    </script>
    
     <script src="vendor/jquery/jquery-2.2.0.min.js"></script>
     <script src="vendor/bootstrap/bootstrap-3.3.6.min.js"></script>
@@ -140,10 +136,10 @@
     <script src="vendor/twitter/typeahead.bundle.min.js"></script>
 
     <script src="js/namespaces.js#v=2"></script>
-    <script src="js/tooltip.js#v=2"></script>
-    <script src="js/gexf-vis.js#v=2"></script>
+    <script src="js/tooltip.js#v=3"></script>
+    <script src="js/gexf-vis.js#v=3"></script>
     
-    <script src="js/event-handler.js#v=2"></script>
+    <script src="js/initialization.js#v=3"></script>
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
