* renamed gexf-vis.js -> data-visualization.js * tooltip refactoring

--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -137,7 +137,7 @@
 
     <script src="js/namespaces.js#v=2"></script>
     <script src="js/tooltip.js#v=3"></script>
-    <script src="js/gexf-vis.js#v=3"></script>
+    <script src="js/data-visualization.js#v=3"></script>
     
     <script src="js/initialization.js#v=3"></script>
 
