--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -133,13 +133,15 @@
     <script src="vendor/sigma/sigma.min.js"></script>
     <script src="vendor/sigma/sigma.parseJson.js#v=2"></script>
 
-    <script src="vendor/twitter/typeahead.bundle.min.js"></script>
-
     <script src="js/namespaces.js#v=2"></script>
     <script src="js/tooltip.js#v=3"></script>
     <script src="js/data-visualization.js#v=3"></script>
-    
-    <script src="js/initialization.js#v=3"></script>
+
+    <script>
+        $(function(){
+            App.dataVisualization.init();
+        });
+    </script>
 
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
