--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -128,12 +128,12 @@
     <script src="vendor/jquery/jquery-2.2.0.min.js"></script>
     <script src="vendor/bootstrap/bootstrap-3.3.6.min.js"></script>
     
-    <script src="data/data.json.js"></script>
+    <script src="data/data.json.js#v=3"></script>
 
     <script src="vendor/sigma/sigma.min.js"></script>
-    <script src="vendor/sigma/sigma.parseJson.js#v=2"></script>
+    <script src="vendor/sigma/sigma.parseJson.js#v=3"></script>
 
-    <script src="js/namespaces.js#v=2"></script>
+    <script src="js/namespaces.js#v=3"></script>
     <script src="js/tooltip.js#v=3"></script>
     <script src="js/data-visualization.js#v=3"></script>
 
