--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -129,8 +129,8 @@
 
     <script src="data/data.json.js#v=3"></script>
 
-    <script src="vendor/sigma/sigma.min.js"></script>
-    <script src="vendor/sigma/sigma.parseJson.js#v=3"></script>
+    <script src="vendor/sigma/sigma-1.1.0.min.js"></script>
+    <script src="vendor/sigma/sigma.plugins.animate.min.js"></script>
 
     <script src="js/namespaces.js#v=3"></script>
     <script src="js/tooltip.js#v=3"></script>
