--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -20,7 +20,7 @@
     <nav id="navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand site-name" href="./">GeekData</a>
+                <a class="navbar-brand site-name" href="index.html">GeekData</a>
             </div>
             
             <div class="collapse navbar-collapse" id="main-navbar" style="text-align: center; font-size: 25px;">
