--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -10,35 +10,27 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <link href="vendor/font-awesome/font-awesome-4.5.0.min.css" rel="stylesheet">
-    <link href="vendor/bootstrap/bootstrap-3.3.6.min.css" rel="stylesheet">
     <link href="vendor/github-corners/github-corners.min.css" rel="stylesheet">
 
     <link href="css/style.css#v=2" rel="stylesheet">
 </head>
 
 <body class="full">
-    <nav id="navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand site-name" href="index.html">GeekData</a>
-            </div>
-            
-            <div class="collapse navbar-collapse" id="main-navbar" style="text-align: center; font-size: 25px;">
-                <div class="slogan">
-                    Find your way in the <span class="highlight-part">universe</span> of technology
-                </div>
-                <div class="pull-right navbar-profiles">
-                    <a href="https://github.com/GSerjo" target="blank">
-                        <img src="https://avatars0.githubusercontent.com/u/1163475?v=3&amp;s=60" title="GSerjo" alt="GSerjo user avatar"/ >
-                    </a>
-                    <a href="https://github.com/FireAlkazar" target="blank">
-                        <img src="https://avatars2.githubusercontent.com/u/936356?v=3&amp;s=60" title="FireAlkazar" alt="FireAlkazar user avatar"/ >
-                    </a>
-                    <a href="https://github.com/Sufflavus" target="blank">
-                        <img src="https://avatars2.githubusercontent.com/u/2123162?v=3&amp;s=60" title="Sufflavus" alt="Sufflavus user avatar"/ >
-                    </a>
-                </div>
-            </div>
+    <nav id="navbar" class="navbar" role="navigation">
+        <a class="navbar-brand site-name" href="index.html">GeekData</a>
+        <div class="slogan">
+            Find your way in the <span class="highlight-part">universe</span> of technology
+        </div>
+        <div class="navbar-profiles">
+            <a href="https://github.com/GSerjo" target="blank">
+                <img src="https://avatars0.githubusercontent.com/u/1163475?v=3&amp;s=60" title="GSerjo" alt="GSerjo user avatar"/ >
+            </a>
+            <a href="https://github.com/FireAlkazar" target="blank">
+                <img src="https://avatars2.githubusercontent.com/u/936356?v=3&amp;s=60" title="FireAlkazar" alt="FireAlkazar user avatar"/ >
+            </a>
+            <a href="https://github.com/Sufflavus" target="blank">
+                <img src="https://avatars2.githubusercontent.com/u/2123162?v=3&amp;s=60" title="Sufflavus" alt="Sufflavus user avatar"/ >
+            </a>
         </div>
     </nav>
 
@@ -125,8 +117,7 @@
     </a>
 
     <script src="vendor/jquery/jquery-2.2.0.min.js"></script>
-    <script src="vendor/bootstrap/bootstrap-3.3.6.min.js"></script>
-
+    
     <script src="data/data.json.js#v=3"></script>
 
     <script src="vendor/sigma/sigma-1.1.0.min.js"></script>
