* styles of header changed according to BEM  - bootstrap files

--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -16,23 +16,26 @@
 </head>
 
 <body class="full">
-    <nav id="navbar" class="navbar" role="navigation">
-        <a class="navbar-brand site-name" href="index.html">GeekData</a>
-        <div class="slogan">
-            Find your way in the <span class="highlight-part">universe</span> of technology
+    <div class="header">
+        <a class="header__logo" href="index.html">GeekData</a>
+        <div class="header__slogan">
+            Find your way in the <span class="header__slogan-highlight">universe</span> of technology
         </div>
-        <div class="navbar-profiles">
-            <a href="https://github.com/GSerjo" target="blank">
-                <img src="https://avatars0.githubusercontent.com/u/1163475?v=3&amp;s=60" title="GSerjo" alt="GSerjo user avatar"/ >
+        <div class="header__team">
+            <a href="https://github.com/GSerjo" target="blank" class="team-member__link">
+                <img class="team-member__avatar" src="https://avatars0.githubusercontent.com/u/1163475?v=3&amp;s=60" 
+                title="GSerjo" alt="GSerjo user avatar"/ >
             </a>
-            <a href="https://github.com/FireAlkazar" target="blank">
-                <img src="https://avatars2.githubusercontent.com/u/936356?v=3&amp;s=60" title="FireAlkazar" alt="FireAlkazar user avatar"/ >
+            <a href="https://github.com/FireAlkazar" target="blank" class="team-member__link">
+                <img class="team-member__avatar" src="https://avatars2.githubusercontent.com/u/936356?v=3&amp;s=60" 
+                title="FireAlkazar" alt="FireAlkazar user avatar"/ >
             </a>
-            <a href="https://github.com/Sufflavus" target="blank">
-                <img src="https://avatars2.githubusercontent.com/u/2123162?v=3&amp;s=60" title="Sufflavus" alt="Sufflavus user avatar"/ >
+            <a href="https://github.com/Sufflavus" target="blank" class="team-member__link">
+                <img class="team-member__avatar"  src="https://avatars2.githubusercontent.com/u/2123162?v=3&amp;s=60" 
+                title="Sufflavus" alt="Sufflavus user avatar"/ >
             </a>
         </div>
-    </nav>
+    </div>
 
     <div class="sigma-parent">
         <div id="loading" class="loading">Loading the data may take a while, please be patient...</div>
