* course tooltip styles

--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -53,8 +53,7 @@
                 <a class="tooltip__header__link" id="lib_url" href="https://github.com/" target="blank" title="link to Github">Github</a>
                 <div class="clearfix"></div>
             </div>
-            <div id="lib_description" class="tooltip__lib_description">
-                JavaScript (not to be confused with Java) is a dynamic, weakly-typed language used for client-side as well as server-side scripting. 
+            <div id="lib_description" class="tooltip__lib_description"> 
             </div>
         </div>
         <div class="content" id="geek_content">
@@ -88,18 +87,13 @@
                 </div>
             </div>
         </div>
-        <div class="content" id="cource_content">
-            <div>
-                <div class="header cource">
-                    <span>
-                        <div class="header-main-content">
-                            <span id="cource_name">jQuery</span>
-                        </div>
-                        <a class="tooltip__header__link cource" id="cource_url" href="http://pluralsight.com/" target="blank" title="link to PluralSight">PluralSight</a>
-                        <div class="clearfix"></div>
-                    </span>
+        <div class="tooltip__content" id="course_content">
+            <div class="tooltip__header tooltip__header_course">
+                <div class="tooltip__header__course-name" id="course_name">
                 </div>
-            </div> 
+                <a class="tooltip__header__link tooltip__header__link_course" id="course_url" href="http://pluralsight.com/" target="blank" title="link to PluralSight">PluralSight</a>
+                <div class="clearfix"></div>
+            </div>
         </div>
     </div>
 
