* tooltip geek's style

--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -56,36 +56,29 @@
             <div id="lib_description" class="tooltip__lib_description"> 
             </div>
         </div>
-        <div class="content" id="geek_content">
-            <div>
-                <div class="header user">
-                    <div class="gravatar">
-                        <a id="geek_profile_url" href="" target="blank">
-                            <div class="gravatar-wrapper">
-                                <img id="geek_avatar" src="images/no-avatar.jpg" alt="user avatar">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="user-info">
-                        <a id="geek_name" href="" target="blank" class="user-link">Guru</a>
-                        <div class="user-badges">
-                            <span id="geek_badges_gold">
-                                <span class="gold-badges">&#9679;</span>
-                                <span class="badgecount">0</span>
-                            </span>
-                            <span id="geek_badges_silver">
-                                <span class="silver-badges">&#9679;</span>
-                                <span class="badgecount">0</span>
-                            </span>
-                            <span id="geek_badges_bronze">
-                                <span class="bronze-badges">&#9679;</span>
-                                <span class="badgecount">0</span>
-                            </span>
-                        </div>
-                        <a id="geek_site" href="" target="blank" rel="nofollow">StackOverflow Profile</a><br>
-                    </div>
+        <div class="tooltip__content" id="geek_content">
+            <a class="tooltip__geek-avatar__link" id="geek_profile_url" href="" target="blank">
+                <img class="tooltip__geek-avatar__image" id="geek_avatar" src="images/no-avatar.jpg" alt="user avatar">
+            </a>
+            <div class="tooltip__geek-info">
+                <div id="geek_name" href="" target="blank" class="tooltip__geek-info__name">Guru</div>
+                <div class="tooltip__geek-info__badges">
+                    <span id="geek_badges_gold">
+                        <span class="tooltip__geek-info__badge_gold">&#9679;</span>
+                        <span class="tooltip__geek-info__badge-count">0</span>
+                    </span>
+                    <span id="geek_badges_silver">
+                        <span class="tooltip__geek-info__badge_silver">&#9679;</span>
+                        <span class="tooltip__geek-info__badge-count">0</span>
+                    </span>
+                    <span id="geek_badges_bronze">
+                        <span class="tooltip__geek-info__badge_bronze">&#9679;</span>
+                        <span class="tooltip__geek-info__badge-count">0</span>
+                    </span>
                 </div>
+                <a id="geek_site" class="tooltip__geek-info__link" href="" target="blank" rel="nofollow">StackOverflow Profile</a><br>
             </div>
+            <div class="clearfix"></div>
         </div>
         <div class="tooltip__content" id="course_content">
             <div class="tooltip__header tooltip__header_course">
