--- a/Source/Web/index.html
+++ b/Source/Web/index.html
@@ -15,6 +15,16 @@
     <link href="css/style.css#v=3" rel="stylesheet">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H0HYZ5C52H"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-H0HYZ5C52H');
+</script>
+    
 <body class="full">
     <div class="header" id="navbar">
         <a class="header__logo" href="index.html">GeekData</a>
@@ -116,14 +126,5 @@
         });
     </script>
     
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-90870523-1', 'auto');
-        ga('send', 'pageview');
-    </script>
 </body>
 </html>
